--- a/index.html
+++ b/index.html
@@ -575,6 +575,15 @@
         if(window.innerWidth > 900) return;
         if(!nav.contains(e.target) && !btn.contains(e.target)) close();
       });
+
+      // close when a nav link is selected (mobile)
+      nav.querySelectorAll('a').forEach(link=>{
+        link.addEventListener('click', (e)=>{
+          if(window.innerWidth <= 900){
+            close();
+          }
+        });
+      });
     })();
   </script>
 </body>
