--- a/index.html
+++ b/index.html
@@ -166,8 +166,8 @@
       [style*="max-width:240px"]{max-width:100% !important}
 
       /* make Office aside (contact-card) span full width and use internal padding */
-      #contact .contact-card{width:100%;max-width:100%;padding-left:0;padding-right:0;box-sizing:border-box}
-      #contact .contact-card{padding:12px 16px}
+      /* expand contact-card to full viewport width (full-bleed) */
+      #contact .contact-card{width:100vw;max-width:100vw;margin-left:calc(50% - 50vw);margin-right:calc(50% - 50vw);padding:12px 16px;box-sizing:border-box}
       #contact .contact-card > *{width:100%;box-sizing:border-box}
     }
 
