chore(games): remove Notes/Dev Log/Design Notes links from game cards

--- a/index.html
+++ b/index.html
@@ -344,7 +344,7 @@
                 <div class="game-meta">Web · Mobile · Desktop</div>
               </div>
             </div>
-            <div class="actions"><a class="btn" href="#play">Play Demo</a> <a class="ghost" href="#about">Notes</a></div>
+            <div class="actions"><a class="btn" href="#play">Play Demo</a></div>
           </div>
         </div>
 
@@ -384,7 +384,7 @@
                 <div class="game-meta">Web · Mobile · Desktop</div>
               </div>
             </div>
-            <div class="actions"><a class="btn" href="#contact">Play / Download</a> <a class="ghost" href="#about">Dev Log</a></div>
+            <div class="actions"><a class="btn" href="#contact">Play / Download</a></div>
           </div>
         </div>
 
@@ -415,7 +415,7 @@
                 <div class="game-meta">Web · Mobile · Desktop</div>
               </div>
             </div>
-            <div class="actions"><a class="btn" href="#play">Try Demo</a> <a class="ghost" href="#about">Design Notes</a></div>
+            <div class="actions"><a class="btn" href="#play">Try Demo</a></div>
           </div>
         </div>
       </div>
