chore: add SVG favicon and favicon link

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <title>Elixir Games — Playful, performant games</title>
   <meta name="description" content="Elixir Games — indie studio building playful, performant games and interactive experiences.">
+  <link rel="icon" href="/favicon.svg" type="image/svg+xml">
   <style>
     :root{
       --bg:#070707;
