feat(games): list Mills, Yatzy, Puzzle and add SVG icons

--- a/index.html
+++ b/index.html
@@ -299,12 +299,26 @@
 
       <div class="section-grid" style="margin-top:16px">
         <div class="game-card">
-          <div class="game-thumb"><img src="/avatar.png" alt="Reactor Rush" style="width:100%;height:100%;object-fit:cover"/></div>
+          <div class="game-thumb">
+            <svg width="72" height="72" viewBox="0 0 72 72" fill="none" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" role="img">
+              <defs>
+                <linearGradient id="g-mills" x1="0" x2="1" y1="0" y2="1">
+                  <stop offset="0" stop-color="#f6d365" />
+                  <stop offset="1" stop-color="#fda085" />
+                </linearGradient>
+              </defs>
+              <rect width="72" height="72" rx="10" fill="url(#g-mills)" />
+              <g transform="translate(18 18)" stroke="#ffffff" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" fill="rgba(255,255,255,0.06)">
+                <circle cx="18" cy="18" r="8" fill="rgba(0,0,0,0.08)" />
+                <path d="M18 0 L22 10 L28 12 L22 18 L18 28 L14 18 L8 12 L14 10 Z" fill="rgba(255,255,255,0.06)"/>
+              </g>
+            </svg>
+          </div>
           <div style="flex:1">
             <div style="display:flex;justify-content:space-between;align-items:center">
               <div>
-                <div style="font-weight:800;color:#fff">Reactor Rush</div>
-                <div class="game-meta">Arcade elixir-mixing puzzler — quick runs, tight controls.</div>
+                <div style="font-weight:800;color:#fff">Mills</div>
+                <div class="game-meta">A quick strategy board game — simple rules, deep play.</div>
               </div>
               <div style="text-align:right">
                 <div style="font-weight:700;color:var(--accent)">Multiplatform</div>
@@ -316,36 +330,67 @@
         </div>
 
         <div class="game-card">
-          <div class="game-thumb"><div style="width:56px;height:56px;background:linear-gradient(90deg,#ff7b7b,#ffb37b);border-radius:8px"></div></div>
+          <div class="game-thumb">
+            <svg width="72" height="72" viewBox="0 0 72 72" fill="none" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" role="img">
+              <defs>
+                <linearGradient id="g-yatzy" x1="0" x2="1" y1="0" y2="1">
+                  <stop offset="0" stop-color="#b8ffd0" />
+                  <stop offset="1" stop-color="#5ee7df" />
+                </linearGradient>
+              </defs>
+              <rect width="72" height="72" rx="10" fill="url(#g-yatzy)" />
+              <g transform="translate(14 14)" fill="#fff" opacity="0.9">
+                <rect x="6" y="6" width="12" height="12" rx="2" fill="#fff" />
+                <rect x="24" y="6" width="12" height="12" rx="2" fill="#fff" />
+                <rect x="6" y="24" width="12" height="12" rx="2" fill="#fff" />
+                <rect x="24" y="24" width="12" height="12" rx="2" fill="#fff" />
+                <text x="34" y="44" font-size="6" fill="rgba(0,0,0,0.5)" text-anchor="end">Yatzy</text>
+              </g>
+            </svg>
+          </div>
           <div style="flex:1">
             <div style="display:flex;justify-content:space-between;align-items:center">
               <div>
-                <div style="font-weight:800;color:#fff">Emberbound</div>
-                <div class="game-meta">Minimal roguelite with short run loops and expressive controls.</div>
+                <div style="font-weight:800;color:#fff">Yatzy</div>
+                <div class="game-meta">Classic dice game — risk and reward in every roll.</div>
               </div>
               <div style="text-align:right">
                 <div style="font-weight:700;color:var(--muted)">Multiplatform</div>
                 <div class="game-meta">Web · Mobile · Desktop</div>
               </div>
             </div>
-            <div class="actions"><a class="btn" href="#contact">Wishlist / Download</a> <a class="ghost" href="#about">Dev Log</a></div>
+            <div class="actions"><a class="btn" href="#contact">Play / Download</a> <a class="ghost" href="#about">Dev Log</a></div>
           </div>
         </div>
 
         <div class="game-card">
-          <div class="game-thumb"><div style="width:56px;height:56px;background:linear-gradient(90deg,#7be7ff,#7bffd9);border-radius:8px"></div></div>
+          <div class="game-thumb">
+            <svg width="72" height="72" viewBox="0 0 72 72" fill="none" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" role="img">
+              <defs>
+                <linearGradient id="g-puzzle" x1="0" x2="1" y1="0" y2="1">
+                  <stop offset="0" stop-color="#c3c0ff" />
+                  <stop offset="1" stop-color="#9bd3ff" />
+                </linearGradient>
+              </defs>
+              <rect width="72" height="72" rx="10" fill="url(#g-puzzle)" />
+              <g transform="translate(14 14)" stroke="#fff" stroke-width="1.6" stroke-linecap="round" stroke-linejoin="round" fill="none">
+                <path d="M6 6h8v8H6zM18 6h8v8h-8zM6 18h8v8H6zM18 18h8v8h-8z" stroke="#ffffff"/>
+                <path d="M12 0v8M26 0v8M0 12h8M34 12h8" stroke-opacity="0.14" stroke="#000"/>
+              </g>
+            </svg>
+          </div>
           <div style="flex:1">
             <div style="display:flex;justify-content:space-between;align-items:center">
               <div>
-                <div style="font-weight:800;color:#fff">Pocket Orchard</div>
-                <div class="game-meta">Relaxing harvest puzzler with procedural levels.</div>
+                <div style="font-weight:800;color:#fff">Puzzle</div>
+                <div class="game-meta">Thoughtful spatial puzzles — short sessions, clever hooks.</div>
               </div>
               <div style="text-align:right">
                 <div style="font-weight:700;color:var(--muted)">Multiplatform</div>
                 <div class="game-meta">Web · Mobile · Desktop</div>
               </div>
             </div>
-            <div class="actions"><a class="btn" href="#play">Play Mobile Demo</a> <a class="ghost" href="#about">Art Notes</a></div>
+            <div class="actions"><a class="btn" href="#play">Try Demo</a> <a class="ghost" href="#about">Design Notes</a></div>
           </div>
         </div>
       </div>
