--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
       .nav-backdrop{z-index:50}
 
       .logo{margin-right:auto}
-      footer{flex-direction:column;gap:12px;align-items:start}
+      footer{flex-direction:column;gap:12px;align-items:center;text-align:center}
       /* make cards stretch full width inside wrap */
       .card, section.card{width:100%;max-width:100%;margin:0;border-radius:10px}
       /* allow small max-width elements to scale down on narrow screens */
